code format and run interferce for solver call back queue for solver

--- a/manual/latex/namespace_space_h_1_1_orbits.tex
+++ b/manual/latex/namespace_space_h_1_1_orbits.tex
@@ -59,7 +59,7 @@ void Space\+H\+::\+Orbits\+::euler\+Rotate (\begin{DoxyParamCaption}\item[{Vecto
 \mbox{\Hypertarget{namespace_space_h_1_1_orbits_a729783768420346b170d79aa5e196841}\label{namespace_space_h_1_1_orbits_a729783768420346b170d79aa5e196841}} 
 \index{Space\+H\+::\+Orbits@{Space\+H\+::\+Orbits}!get\+Eccentric\+Anomaly@{get\+Eccentric\+Anomaly}}
 \index{get\+Eccentric\+Anomaly@{get\+Eccentric\+Anomaly}!Space\+H\+::\+Orbits@{Space\+H\+::\+Orbits}}
-\subsubsection{\texorpdfstring{get\+Eccentric\+Anomaly()}{getEccentricAnomaly()}}
+\subsubsection{\texorpdfstring{get\+Eccentric\+Anomaly()}{calcuEccentricAnomaly()}}
 {\footnotesize\ttfamily template$<$typename Scalar $>$ \\
 \mbox{\hyperlink{create_kepler_8cpp_a8c2981f3f834be9448a6ab06c28748eb}{Scalar}} Space\+H\+::\+Orbits\+::get\+Eccentric\+Anomaly (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{create_kepler_8cpp_a8c2981f3f834be9448a6ab06c28748eb}{Scalar}}}]{M,  }\item[{\mbox{\hyperlink{create_kepler_8cpp_a8c2981f3f834be9448a6ab06c28748eb}{Scalar}}}]{e }\end{DoxyParamCaption})}
 
@@ -105,7 +105,7 @@ Here is the caller graph for this function\+:
 \mbox{\Hypertarget{namespace_space_h_1_1_orbits_a43d1a07ed25eaf775f3a83d7000a2596}\label{namespace_space_h_1_1_orbits_a43d1a07ed25eaf775f3a83d7000a2596}} 
 \index{Space\+H\+::\+Orbits@{Space\+H\+::\+Orbits}!get\+True\+Anomaly@{get\+True\+Anomaly}}
 \index{get\+True\+Anomaly@{get\+True\+Anomaly}!Space\+H\+::\+Orbits@{Space\+H\+::\+Orbits}}
-\subsubsection{\texorpdfstring{get\+True\+Anomaly()}{getTrueAnomaly()}}
+\subsubsection{\texorpdfstring{get\+True\+Anomaly()}{calcuTrueAnomaly()}}
 {\footnotesize\ttfamily template$<$typename Scalar $>$ \\
 \mbox{\hyperlink{create_kepler_8cpp_a8c2981f3f834be9448a6ab06c28748eb}{Scalar}} Space\+H\+::\+Orbits\+::get\+True\+Anomaly (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{create_kepler_8cpp_a8c2981f3f834be9448a6ab06c28748eb}{Scalar}}}]{E,  }\item[{\mbox{\hyperlink{create_kepler_8cpp_a8c2981f3f834be9448a6ab06c28748eb}{Scalar}}}]{e }\end{DoxyParamCaption})}
 
