add class graph

--- a/docs/latex/classspace_1_1_a_rchain_system.tex
+++ b/docs/latex/classspace_1_1_a_rchain_system.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$archain.\+hpp$>$}
 
-Inheritance diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, Reg\+Type $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_a_rchain_system}
+\includegraphics[width=225pt]{classspace_1_1_a_rchain_system__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::A\+Rchain\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=225pt]{classspace_1_1_a_rchain_system__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
