--- a/docs/latex/classspace_1_1_p_i_d_controller.tex
+++ b/docs/latex/classspace_1_1_p_i_d_controller.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$P\+I\+D-\/controller.\+hpp$>$}
 
-Inheritance diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_p_i_d_controller}
+\includegraphics[width=192pt]{classspace_1_1_p_i_d_controller__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::P\+I\+D\+Controller$<$ Max\+\_\+order, T $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=192pt]{classspace_1_1_p_i_d_controller__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
