--- a/docs/latex/classspace_1_1_point_particles.tex
+++ b/docs/latex/classspace_1_1_point_particles.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1_point_particles}{}\doxysection{space\+::Point\+Particles$<$ Type\+System $>$ Class Template Reference}
 \label{classspace_1_1_point_particles}\index{space::PointParticles$<$ TypeSystem $>$@{space::PointParticles$<$ TypeSystem $>$}}
-Inheritance diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_point_particles}
+\includegraphics[width=236pt]{classspace_1_1_point_particles__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::Point\+Particles$<$ Type\+System $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=236pt]{classspace_1_1_point_particles__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
