--- a/docs/latex/classspace_1_1_regularized_system.tex
+++ b/docs/latex/classspace_1_1_regularized_system.tex
@@ -9,10 +9,24 @@ Regularized particle System.
 
 {\ttfamily \#include $<$regu-\/system.\+hpp$>$}
 
-Inheritance diagram for space\+::Regularized\+System$<$ Particles, Interactions, Reg\+Type $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::Regularized\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_regularized_system}
+\includegraphics[width=215pt]{classspace_1_1_regularized_system__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::Regularized\+System$<$ Particles, Interactions, Reg\+Type $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=215pt]{classspace_1_1_regularized_system__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
