--- a/docs/latex/classspace_1_1_simple_system.tex
+++ b/docs/latex/classspace_1_1_simple_system.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$base-\/system.\+hpp$>$}
 
-Inheritance diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_simple_system}
+\includegraphics[width=218pt]{classspace_1_1_simple_system__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::Simple\+System$<$ Particles, Interactions $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=218pt]{classspace_1_1_simple_system__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
