--- a/docs/latex/classspace_1_1_size_particles.tex
+++ b/docs/latex/classspace_1_1_size_particles.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$finite-\/size.\+hpp$>$}
 
-Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_size_particles}
+\includegraphics[width=233pt]{classspace_1_1_size_particles__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::Size\+Particles$<$ Type\+System $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=233pt]{classspace_1_1_size_particles__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Data Structures}
