--- a/docs/latex/classspace_1_1_tidal_force.tex
+++ b/docs/latex/classspace_1_1_tidal_force.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1_tidal_force}{}\doxysection{space\+::Tidal\+Force Class Reference}
 \label{classspace_1_1_tidal_force}\index{space::TidalForce@{space::TidalForce}}
-Inheritance diagram for space\+::Tidal\+Force\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::Tidal\+Force\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_tidal_force}
+\includegraphics[width=180pt]{classspace_1_1_tidal_force__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::Tidal\+Force\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=180pt]{classspace_1_1_tidal_force__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
