--- a/docs/latex/classspace_1_1_worst_offender.tex
+++ b/docs/latex/classspace_1_1_worst_offender.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$worst-\/offender.\+hpp$>$}
 
-Inheritance diagram for space\+::Worst\+Offender$<$ T $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::Worst\+Offender$<$ T $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_worst_offender}
+\includegraphics[width=216pt]{classspace_1_1_worst_offender__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::Worst\+Offender$<$ T $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=216pt]{classspace_1_1_worst_offender__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
