--- a/docs/latex/classspace_1_1integrator_1_1symplectic10th.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic10th.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1integrator_1_1symplectic10th}{}\doxysection{space\+::integrator\+::symplectic10th Class Reference}
 \label{classspace_1_1integrator_1_1symplectic10th}\index{space::integrator::symplectic10th@{space::integrator::symplectic10th}}
-Inheritance diagram for space\+::integrator\+::symplectic10th\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::integrator\+::symplectic10th\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1integrator_1_1symplectic10th}
+\includegraphics[width=242pt]{classspace_1_1integrator_1_1symplectic10th__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::integrator\+::symplectic10th\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=242pt]{classspace_1_1integrator_1_1symplectic10th__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
