--- a/docs/latex/classspace_1_1integrator_1_1symplectic2nd.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic2nd.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1integrator_1_1symplectic2nd}{}\doxysection{space\+::integrator\+::symplectic2nd Class Reference}
 \label{classspace_1_1integrator_1_1symplectic2nd}\index{space::integrator::symplectic2nd@{space::integrator::symplectic2nd}}
-Inheritance diagram for space\+::integrator\+::symplectic2nd\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::integrator\+::symplectic2nd\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1integrator_1_1symplectic2nd}
+\includegraphics[width=239pt]{classspace_1_1integrator_1_1symplectic2nd__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::integrator\+::symplectic2nd\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=239pt]{classspace_1_1integrator_1_1symplectic2nd__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
