--- a/docs/latex/classspace_1_1interactions_1_1_newtonian_grav.tex
+++ b/docs/latex/classspace_1_1interactions_1_1_newtonian_grav.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1interactions_1_1_newtonian_grav}{}\doxysection{space\+::interactions\+::Newtonian\+Grav Class Reference}
 \label{classspace_1_1interactions_1_1_newtonian_grav}\index{space::interactions::NewtonianGrav@{space::interactions::NewtonianGrav}}
-Inheritance diagram for space\+::interactions\+::Newtonian\+Grav\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::interactions\+::Newtonian\+Grav\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1interactions_1_1_newtonian_grav}
+\includegraphics[width=182pt]{classspace_1_1interactions_1_1_newtonian_grav__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::interactions\+::Newtonian\+Grav\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=182pt]{classspace_1_1interactions_1_1_newtonian_grav__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
