--- a/docs/latex/classspace_1_1interactions_1_1_post_newtonian_grav.tex
+++ b/docs/latex/classspace_1_1interactions_1_1_post_newtonian_grav.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$post-\/newtonian.\+hpp$>$}
 
-Inheritance diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+1st\+\_\+order, \+\_\+2nd\+\_\+order, \+\_\+2\+\_\+5th\+\_\+order $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+1st\+\_\+order, \+\_\+2nd\+\_\+order, \+\_\+2\+\_\+5th\+\_\+order $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1interactions_1_1_post_newtonian_grav}
+\includegraphics[width=211pt]{classspace_1_1interactions_1_1_post_newtonian_grav__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::interactions\+::Post\+Newtonian\+Grav$<$ \+\_\+1st\+\_\+order, \+\_\+2nd\+\_\+order, \+\_\+2\+\_\+5th\+\_\+order $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=211pt]{classspace_1_1interactions_1_1_post_newtonian_grav__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
