--- a/docs/latex/classspace_1_1ode_iterator_1_1_burlish_stoer.tex
+++ b/docs/latex/classspace_1_1ode_iterator_1_1_burlish_stoer.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$Burlish-\/\+Stoer.\+hpp$>$}
 
-Inheritance diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+Checker, Step\+Control $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+Checker, Step\+Control $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1ode_iterator_1_1_burlish_stoer}
+\includegraphics[width=256pt]{classspace_1_1ode_iterator_1_1_burlish_stoer__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::ode\+Iterator\+::Burlish\+Stoer$<$ Real, Err\+Checker, Step\+Control $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=350pt]{classspace_1_1ode_iterator_1_1_burlish_stoer__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
