--- a/docs/latex/classspace_1_1ode_iterator_1_1_const_ode_iterator.tex
+++ b/docs/latex/classspace_1_1ode_iterator_1_1_const_ode_iterator.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$const-\/iterator.\+hpp$>$}
 
-Inheritance diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integrator $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integrator $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1ode_iterator_1_1_const_ode_iterator}
+\includegraphics[width=237pt]{classspace_1_1ode_iterator_1_1_const_ode_iterator__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::ode\+Iterator\+::Const\+Ode\+Iterator$<$ Integrator $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=237pt]{classspace_1_1ode_iterator_1_1_const_ode_iterator__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
