--- a/docs/latex/struct_space_h_1_1_lazy_1_1_binary___expr.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_binary___expr.tex
@@ -1,9 +1,23 @@
 \hypertarget{struct_space_h_1_1_lazy_1_1_binary___expr}{}\doxysection{SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$ Struct Template Reference}
 \label{struct_space_h_1_1_lazy_1_1_binary___expr}\index{SpaceH::Lazy::Binary\_Expr$<$ Operator, Lhs, Rhs $>$@{SpaceH::Lazy::Binary\_Expr$<$ Operator, Lhs, Rhs $>$}}
-Inheritance diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{struct_space_h_1_1_lazy_1_1_binary___expr}
+\includegraphics[width=209pt]{struct_space_h_1_1_lazy_1_1_binary___expr__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for SpaceH\+::Lazy\+::Binary\+\_\+\+Expr$<$ Operator, Lhs, Rhs $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=209pt]{struct_space_h_1_1_lazy_1_1_binary___expr__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
