--- a/docs/latex/struct_space_h_1_1_lazy_1_1_larray.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_larray.tex
@@ -1,9 +1,23 @@
 \hypertarget{struct_space_h_1_1_lazy_1_1_larray}{}\doxysection{SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$ Struct Template Reference}
 \label{struct_space_h_1_1_lazy_1_1_larray}\index{SpaceH::Lazy::Larray$<$ T, Len, IsSmall $>$@{SpaceH::Lazy::Larray$<$ T, Len, IsSmall $>$}}
-Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{struct_space_h_1_1_lazy_1_1_larray}
+\includegraphics[width=224pt]{struct_space_h_1_1_lazy_1_1_larray__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, Is\+Small $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=224pt]{struct_space_h_1_1_lazy_1_1_larray__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
