--- a/docs/latex/struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4.tex
@@ -1,9 +1,23 @@
 \hypertarget{struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4}{}\doxysection{SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$ Struct Template Reference}
 \label{struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4}\index{SpaceH::Lazy::Larray$<$ T, Len, true $>$@{SpaceH::Lazy::Larray$<$ T, Len, true $>$}}
-Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4}
+\includegraphics[width=209pt]{struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for SpaceH\+::Lazy\+::Larray$<$ T, Len, true $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=209pt]{struct_space_h_1_1_lazy_1_1_larray_3_01_t_00_01_len_00_01true_01_4__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
