--- a/docs/latex/struct_space_h_1_1_lazy_1_1_unary___expr.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_unary___expr.tex
@@ -1,9 +1,23 @@
 \hypertarget{struct_space_h_1_1_lazy_1_1_unary___expr}{}\doxysection{SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$ Struct Template Reference}
 \label{struct_space_h_1_1_lazy_1_1_unary___expr}\index{SpaceH::Lazy::Unary\_Expr$<$ Operator, Unary $>$@{SpaceH::Lazy::Unary\_Expr$<$ Operator, Unary $>$}}
-Inheritance diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{struct_space_h_1_1_lazy_1_1_unary___expr}
+\includegraphics[width=211pt]{struct_space_h_1_1_lazy_1_1_unary___expr__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for SpaceH\+::Lazy\+::Unary\+\_\+\+Expr$<$ Operator, Unary $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=211pt]{struct_space_h_1_1_lazy_1_1_unary___expr__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
