--- a/docs/latex/structspace_1_1_coords.tex
+++ b/docs/latex/structspace_1_1_coords.tex
@@ -4,6 +4,16 @@
 
 {\ttfamily \#include $<$coords.\+hpp$>$}
 
+
+
+Collaboration diagram for space\+::Coords$<$ T $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=183pt]{structspace_1_1_coords__coll__graph}
+\end{center}
+\end{figure}
 \doxysubsection*{Public Types}
 \begin{DoxyCompactItemize}
 \item 
