--- a/docs/latex/structspace_1_1_kahan.tex
+++ b/docs/latex/structspace_1_1_kahan.tex
@@ -9,6 +9,16 @@
 
 {\ttfamily \#include $<$kahan-\/number.\+hpp$>$}
 
+
+
+Collaboration diagram for space\+::Kahan$<$ T $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=180pt]{structspace_1_1_kahan__coll__graph}
+\end{center}
+\end{figure}
 \doxysubsection*{Public Types}
 \begin{DoxyCompactItemize}
 \item 
