--- a/docs/latex/structspace_1_1_point_particle.tex
+++ b/docs/latex/structspace_1_1_point_particle.tex
@@ -4,6 +4,16 @@
 
 {\ttfamily \#include $<$point-\/particles.\+hpp$>$}
 
+
+
+Collaboration diagram for space\+::Point\+Particle$<$ Real $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=250pt]{structspace_1_1_point_particle__coll__graph}
+\end{center}
+\end{figure}
 \doxysubsection*{Public Types}
 \begin{DoxyCompactItemize}
 \item 
