--- a/docs/latex/structspace_1_1_size_particles_1_1_particle.tex
+++ b/docs/latex/structspace_1_1_size_particles_1_1_particle.tex
@@ -1,9 +1,23 @@
 \hypertarget{structspace_1_1_size_particles_1_1_particle}{}\doxysection{space\+::Size\+Particles$<$ Type\+System $>$\+::Particle Struct Reference}
 \label{structspace_1_1_size_particles_1_1_particle}\index{space::SizeParticles$<$ TypeSystem $>$::Particle@{space::SizeParticles$<$ TypeSystem $>$::Particle}}
-Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{structspace_1_1_size_particles_1_1_particle}
+\includegraphics[width=207pt]{structspace_1_1_size_particles_1_1_particle__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::Size\+Particles$<$ Type\+System $>$\+::Particle\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=207pt]{structspace_1_1_size_particles_1_1_particle__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
