--- a/docs/latex/structspace_1_1is__container.tex
+++ b/docs/latex/structspace_1_1is__container.tex
@@ -1,9 +1,23 @@
 \hypertarget{structspace_1_1is__container}{}\doxysection{space\+::is\+\_\+container$<$ T, \+\_\+ $>$ Struct Template Reference}
 \label{structspace_1_1is__container}\index{space::is\_container$<$ T, \_ $>$@{space::is\_container$<$ T, \_ $>$}}
-Inheritance diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{structspace_1_1is__container}
+\includegraphics[width=182pt]{structspace_1_1is__container__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::is\+\_\+container$<$ T, \+\_\+ $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=182pt]{structspace_1_1is__container__coll__graph}
 \end{center}
 \end{figure}
 
