--- a/docs/latex/structspace_1_1orbit_1_1_orbit_args.tex
+++ b/docs/latex/structspace_1_1orbit_1_1_orbit_args.tex
@@ -4,10 +4,14 @@
 
 {\ttfamily \#include $<$orbits.\+hpp$>$}
 
-Inheritance diagram for space\+::orbit\+::Orbit\+Args$<$ Real $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::orbit\+::Orbit\+Args$<$ Real $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{structspace_1_1orbit_1_1_orbit_args}
+\includegraphics[width=202pt]{structspace_1_1orbit_1_1_orbit_args__inherit__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
