--- a/docs/latex/structspace_1_1vec3.tex
+++ b/docs/latex/structspace_1_1vec3.tex
@@ -9,6 +9,16 @@ Self 3D vector class.
 
 {\ttfamily \#include $<$vector3f.\+h$>$}
 
+
+
+Collaboration diagram for space\+::vec3$<$ T $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=172pt]{structspace_1_1vec3__coll__graph}
+\end{center}
+\end{figure}
 \doxysubsection*{Public Types}
 \begin{DoxyCompactItemize}
 \item 
