--- a/docs/latex/classspace_1_1_r_m_s.tex
+++ b/docs/latex/classspace_1_1_r_m_s.tex
@@ -4,10 +4,24 @@
 
 {\ttfamily \#include $<$R\+M\+S.\+hpp$>$}
 
-Inheritance diagram for space\+::R\+MS$<$ T $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::R\+MS$<$ T $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1_r_m_s}
+\includegraphics[width=188pt]{classspace_1_1_r_m_s__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::R\+MS$<$ T $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=188pt]{classspace_1_1_r_m_s__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
