--- a/docs/latex/classspace_1_1integrator_1_1symplectic4th.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic4th.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1integrator_1_1symplectic4th}{}\doxysection{space\+::integrator\+::symplectic4th Class Reference}
 \label{classspace_1_1integrator_1_1symplectic4th}\index{space::integrator::symplectic4th@{space::integrator::symplectic4th}}
-Inheritance diagram for space\+::integrator\+::symplectic4th\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::integrator\+::symplectic4th\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1integrator_1_1symplectic4th}
+\includegraphics[width=237pt]{classspace_1_1integrator_1_1symplectic4th__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::integrator\+::symplectic4th\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=237pt]{classspace_1_1integrator_1_1symplectic4th__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
