--- a/docs/latex/classspace_1_1integrator_1_1symplectic6th.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic6th.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1integrator_1_1symplectic6th}{}\doxysection{space\+::integrator\+::symplectic6th Class Reference}
 \label{classspace_1_1integrator_1_1symplectic6th}\index{space::integrator::symplectic6th@{space::integrator::symplectic6th}}
-Inheritance diagram for space\+::integrator\+::symplectic6th\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::integrator\+::symplectic6th\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1integrator_1_1symplectic6th}
+\includegraphics[width=237pt]{classspace_1_1integrator_1_1symplectic6th__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::integrator\+::symplectic6th\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=237pt]{classspace_1_1integrator_1_1symplectic6th__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
