--- a/docs/latex/classspace_1_1integrator_1_1symplectic8th.tex
+++ b/docs/latex/classspace_1_1integrator_1_1symplectic8th.tex
@@ -1,9 +1,23 @@
 \hypertarget{classspace_1_1integrator_1_1symplectic8th}{}\doxysection{space\+::integrator\+::symplectic8th Class Reference}
 \label{classspace_1_1integrator_1_1symplectic8th}\index{space::integrator::symplectic8th@{space::integrator::symplectic8th}}
-Inheritance diagram for space\+::integrator\+::symplectic8th\+:\begin{figure}[H]
+
+
+Inheritance diagram for space\+::integrator\+::symplectic8th\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{classspace_1_1integrator_1_1symplectic8th}
+\includegraphics[width=237pt]{classspace_1_1integrator_1_1symplectic8th__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for space\+::integrator\+::symplectic8th\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=237pt]{classspace_1_1integrator_1_1symplectic8th__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Member Functions}
