--- a/docs/latex/struct_space_h_1_1_lazy_1_1_slice___expr.tex
+++ b/docs/latex/struct_space_h_1_1_lazy_1_1_slice___expr.tex
@@ -1,9 +1,23 @@
 \hypertarget{struct_space_h_1_1_lazy_1_1_slice___expr}{}\doxysection{SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$ Struct Template Reference}
 \label{struct_space_h_1_1_lazy_1_1_slice___expr}\index{SpaceH::Lazy::Slice\_Expr$<$ T, Begin, End, Stride, SrcSize $>$@{SpaceH::Lazy::Slice\_Expr$<$ T, Begin, End, Stride, SrcSize $>$}}
-Inheritance diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$\+:\begin{figure}[H]
+
+
+Inheritance diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$\+:
+\nopagebreak
+\begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[height=2.000000cm]{struct_space_h_1_1_lazy_1_1_slice___expr}
+\includegraphics[width=205pt]{struct_space_h_1_1_lazy_1_1_slice___expr__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for SpaceH\+::Lazy\+::Slice\+\_\+\+Expr$<$ T, Begin, End, Stride, Src\+Size $>$\+:
+\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=205pt]{struct_space_h_1_1_lazy_1_1_slice___expr__coll__graph}
 \end{center}
 \end{figure}
 \doxysubsection*{Public Types}
